Added username post

--- a/templates/follower_list.html
+++ b/templates/follower_list.html
@@ -42,34 +42,49 @@
                 </div>
             </nav>
 
+<!-- {% with messages = get_flashed_messages(with_categories=true) %}
+{% if messages %}
+<ul>
+    {% for message in messages %}
+    <li>{{ message[1] }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+{% endwith %} -->
+
             <div class="jumbotron">
                 <h1 class="display-4">Follower</h1>
+                {% if username %}
+                <p class="lead">{{ username }}'s followers</p>
+                {% else %}
                 <p class="lead">list of followers</p>
+                {% endif  %}
             </div>
 
-            <!-- Username Input Form -->
-            <form action="follower" method="post">
-                <!-- used to protect the form against csrf attacks -->
-                {{ form.hidden_tag() }}
-
-                <div class="form-row align-items-center">
-                    <div class="col-auto">
-                        <label class="sr-only" for="inlineFormInputGroup">Username</label>
-                        <div class="input-group mb-2">
-                            <div class="input-group-prepend">
-                            <div class="input-group-text">@</div>
-                        </div>
-                        <input type="text" class="form-control" id="inlineFormInputGroup"
-                            name="username" placeholder="Username" >
-                        <!-- {{ form.username }} -->
-                      </div>
-                    </div>
-                    <div class="col-auto">
-                        <button type="submit" class="btn btn-primary mb-2">Submit</button>
-                        <!-- <input type="submit" value="Go"> -->
-                    </div>
-                </div>
-            </form>
+            <!-- follower list -->
+            {% if data %}
+            <ul class="list-group pb-2">
+                {% for element in data %}
+                <li class="list-group-item">
+                    <!-- FORMAT: image username link following(optional) -->
+                    <img src="https://images.hive.blog/u/{{ element }}/avatar"
+                        onerror="this.onerror=null;
+                        this.src='https://images.hive.blog/u/hiveonboard/avatar'"
+                        alt="avatar">
+                    <a  href="https://hive.blog/@{{ element }}"> @{{ element }}</a>
+                    {% if data[element] %}
+                    <label class="border rounded bg-primary text-white m-3 p-1">Following</label>
+                    {% else %}
+                    <!-- <label class="border rounded bg-light text-dark m-3 p-1">Follow</label> -->
+                    {% endif  %}
+                </li>
+                {% endfor %}
+            </ul>
+            {% else %}
+            <ul class="list-group pb-2">
+                <li class="list-group-item active">Nothing To See Here</li>
+            </ul>
+            {% endif  %}
 
         </div>
 
