--- a/templates/following.html
+++ b/templates/following.html
@@ -15,7 +15,10 @@
         <meta name="theme-color" content="#ffffff">
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <link rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+            integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+            crossorigin="anonymous">
 
         <title>Following</title>
     </head>
@@ -25,10 +28,14 @@
             <!-- Navbar -->
             <nav class="navbar navbar-light bg-light">
                 <a class="navbar-brand" href="/">
-                    <img src="/static/images/favicon/apple-touch-icon.png" width="30" height="30" class="d-inline-block align-top" alt="">
+                    <img src="/static/images/favicon/apple-touch-icon.png"
+                    width="30" height="30"
+                    class="d-inline-block align-top" alt="">
                     tomoyan
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button"
+                    data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -47,7 +54,10 @@
             </div>
 
             <!-- Username Input Form -->
-            <form>
+            <form action="following" method="post">
+                <!-- used to protect the form against csrf attacks -->
+                {{ form.hidden_tag() }}
+
                 <div class="form-row align-items-center">
                     <div class="col-auto">
                         <label class="sr-only" for="inlineFormInputGroup">Username</label>
@@ -55,7 +65,8 @@
                             <div class="input-group-prepend">
                             <div class="input-group-text">@</div>
                         </div>
-                        <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Username">
+                        <input type="text" class="form-control" id="inlineFormInputGroup"
+                            name="username" placeholder="Username">
                       </div>
                     </div>
                     <div class="col-auto">
