added form require

--- a/templates/follower.html
+++ b/templates/follower.html
@@ -60,7 +60,7 @@
                             <div class="input-group-text">@</div>
                         </div>
                         <input type="text" class="form-control" id="inlineFormInputGroup"
-                            name="username" placeholder="Username" >
+                            name="username" placeholder="Username" required>
                         <!-- {{ form.username }} -->
                       </div>
                     </div>
