--- a/templates/following.html
+++ b/templates/following.html
@@ -66,7 +66,7 @@
                             <div class="input-group-text">@</div>
                         </div>
                         <input type="text" class="form-control" id="inlineFormInputGroup"
-                            name="username" placeholder="Username">
+                            name="username" placeholder="Username" required>
                       </div>
                     </div>
                     <div class="col-auto">
