change jumbotron colors

--- a/templates/follower.html
+++ b/templates/follower.html
@@ -42,7 +42,7 @@
                 </div>
             </nav>
 
-            <div class="jumbotron">
+            <div class="jumbotron bg-danger text-white">
                 <h1 class="display-4">Follower</h1>
                 <p class="lead">list of followers</p>
             </div>
