--- a/templates/following.html
+++ b/templates/following.html
@@ -48,7 +48,7 @@
                 </div>
             </nav>
 
-            <div class="jumbotron">
+            <div class="jumbotron bg-danger text-white">
                 <h1 class="display-4">Following</h1>
                 <p class="lead">list of following users</p>
             </div>
