--- a/templates/following_list.html
+++ b/templates/following_list.html
@@ -42,7 +42,7 @@
                 </div>
             </nav>
 
-            <div class="jumbotron">
+            <div class="jumbotron bg-danger text-white">
                 <h1 class="display-4">Following</h1>
                 {% if username %}
                 <p class="lead">{{ username }}'s following users</p>
