--- a/templates/following_list.html
+++ b/templates/following_list.html
@@ -6,13 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- favicon -->
-        <link rel="apple-touch-icon" sizes="76x76" href="/static/images/favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/static/images/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/static/images/favicon/favicon-16x16.png">
-        <link rel="manifest" href="/static/images/favicon/site.webmanifest">
-        <link rel="mask-icon" href="/static/images/faviconsafari-pinned-tab.svg" color="#5bbad5">
-        <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="theme-color" content="#ffffff">
+        {% include 'favicon.html' %}
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -23,24 +17,8 @@
 
         <div class="container">
 
-            <!-- Navbar -->
-            <nav class="navbar navbar-light bg-light">
-                <a class="navbar-brand" href="/">
-                    <img src="/static/images/favicon/apple-touch-icon.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    tomoyan
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                </ul>
-                </div>
-            </nav>
+            <!-- top navigation menu -->
+            {% include 'navbar.html' %}
 
             <div class="jumbotron bg-danger text-white">
                 <h1 class="display-4">Following</h1>
@@ -54,21 +32,32 @@
             <!-- following list -->
             {% if data %}
             <ul class="list-group pb-2">
+
                 {% for element in data %}
                 <li class="list-group-item">
-                    <!-- FORMAT: image username link follows you(optional) -->
-                    <img src="https://images.hive.blog/u/{{ element }}/avatar"
-                        onerror="this.onerror=null;
-                        this.src='https://images.hive.blog/u/hiveonboard/avatar'"
-                        alt="avatar">
-                    <a  href="https://hive.blog/@{{ element }}"> @{{ element }}</a>
-                    {% if data[element] %}
-                    <label class="border rounded bg-primary text-white m-1 p-1">Follows you</label>
-                    {% else %}
-                    <!-- <label class="border rounded bg-light text-dark m-3 p-1">Follow</label> -->
-                    {% endif  %}
+                    <!-- FORMAT: image username link following(optional) -->
+                    <div class="d-flex">
+                        <div class="p-2 bd-highlight">
+                            <img src="https://images.hive.blog/u/{{ element }}/avatar"
+                            onerror="this.onerror=null;
+                            this.src='https://images.hive.blog/u/hiveonboard/avatar'"
+                            alt="avatar">
+                        </div>
+                        <div class="align-self-center">
+                            <a  href="https://hive.blog/@{{ element }}"> @{{ element }}</a>
+                        </div>
+
+                        {% if data[element] %}
+                        <div class="align-self-center">
+                            <label class="border rounded bg-primary text-white m-2 p-1">Follows you</label>
+                        </div>
+                        {% else %}
+                        <!-- <label class="border rounded bg-light text-dark m-3 p-1">Follow</label> -->
+                        {% endif  %}
+                    </div>
                 </li>
                 {% endfor %}
+
             </ul>
             {% else %}
             <ul class="list-group pb-2">
@@ -78,10 +67,7 @@
 
         </div>
 
-        <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+        {% include 'bootstrap_js.html' %}
       </body>
 </html>
