added hive steemit layout

--- a/templates/hive/follower.html
+++ b/templates/hive/follower.html
@@ -40,7 +40,7 @@
             {% endwith %}
 
             <!-- Username Input Form -->
-            <form action="follower" method="post">
+            <form action="/hive/follower" method="post">
                 <!-- used to protect the form against csrf attacks -->
                 {{ form.hidden_tag() }}
 
