--- a/templates/hive/following.html
+++ b/templates/hive/following.html
@@ -43,7 +43,7 @@
             {% endwith %}
 
             <!-- Username Input Form -->
-            <form action="following" method="post">
+            <form action="/hive/following" method="post">
                 <!-- used to protect the form against csrf attacks -->
                 {{ form.hidden_tag() }}
 
