--- a/templates/index.html
+++ b/templates/index.html
@@ -25,9 +25,29 @@
                 <p class="lead">blockchain tools using python beem library</p>
             </div>
 
-            <div class="list-group">
-                <a href="follower" class="list-group-item list-group-item-action w-100">Follower</a>
-                <a href="following" class="list-group-item list-group-item-action w-100">Following</a>
+            <!-- card list -->
+            <div class="row">
+                <div class="col-sm-6">
+                    <!-- hive list -->
+                    <div class="card list-group-item-danger">
+                        <div class="card-header">Hive</div>
+                        <ul class="list-group list-group-flush">
+                            <a href="/hive/follower" class="list-group-item list-group-item-action">Follower</a>
+                            <a href="/hive/following" class="list-group-item list-group-item-action">Following</a>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-sm-6">
+                    <!-- steemit list -->
+                    <div class="card list-group-item-success">
+                        <div class="card-header">Steemit</div>
+                        <ul class="list-group list-group-flush">
+                            <a href="/steemit/follower" class="list-group-item list-group-item-action">Follower</a>
+                            <a href="/steemit/following" class="list-group-item list-group-item-action">Following</a>
+                        </ul>
+                    </div>
+                </div>
             </div>
 
         </div>
