Added profile feature

--- a/templates/hive/follower.html
+++ b/templates/hive/follower.html
@@ -21,7 +21,7 @@
             {% include 'navbar.html' %}
 
             <div class="jumbotron bg-danger text-white">
-                <h1 class="display-4">Follower</h1>
+                <h1 class="display-4">Hive Follower</h1>
                 <p class="lead">list of followers</p>
             </div>
 
