--- a/templates/steemit/following.html
+++ b/templates/steemit/following.html
@@ -24,7 +24,7 @@
             {% include 'navbar.html' %}
 
             <div class="jumbotron bg-success text-white">
-                <h1 class="display-4">Following</h1>
+                <h1 class="display-4">Steemit Following</h1>
                 <p class="lead">list of following users</p>
             </div>
 
