--- a/templates/hive/following.html
+++ b/templates/hive/following.html
@@ -24,7 +24,7 @@
             {% include 'navbar.html' %}
 
             <div class="jumbotron bg-danger text-white">
-                <h1 class="display-4">Following</h1>
+                <h1 class="display-4">Hive Following</h1>
                 <p class="lead">list of following users</p>
             </div>
 
