--- a/templates/hive/following_list.html
+++ b/templates/hive/following_list.html
@@ -21,7 +21,7 @@
             {% include 'navbar.html' %}
 
             <div class="jumbotron bg-danger text-white">
-                <h1 class="display-4">Following</h1>
+                <h1 class="display-4">Hive Following</h1>
                 {% if username %}
                 <p class="lead">{{ username }}'s following users</p>
                 {% else %}
