--- a/templates/hive/profile.html
+++ b/templates/hive/profile.html
@@ -11,7 +11,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-        <title>Follower</title>
+        <title>Profile</title>
     </head>
     <body>
 
@@ -20,9 +20,9 @@
             <!-- top navigation menu -->
             {% include 'navbar.html' %}
 
-            <div class="jumbotron bg-success text-white">
-                <h1 class="display-4">Steemit Follower</h1>
-                <p class="lead">list of followers</p>
+            <div class="jumbotron bg-danger text-white">
+                <h1 class="display-4">Hive Profile</h1>
+                <p class="lead">user information</p>
             </div>
 
             <!-- flash alert -->
@@ -40,7 +40,7 @@
             {% endwith %}
 
             <!-- Username Input Form -->
-            <form action="/steemit/follower" method="post">
+            <form action="/hive/profile" method="post">
                 <!-- used to protect the form against csrf attacks -->
                 {{ form.hidden_tag() }}
 
