--- a/templates/hive/profile_data.html
+++ b/templates/hive/profile_data.html
@@ -23,16 +23,36 @@
             <div class="jumbotron bg-danger text-white">
                 <h1 class="display-4">Hive Profile</h1>
                 {% if username %}
-                <p class="lead">{{ username }}'s user information
-                    <b>( {{ data['reputation'] }} )</b>
+<!--                 <p class="lead">{{ username }}'s user information
+                    <b>( {{ data['reputation'] }} )</b><br>
+                    Author Reward (30 days): <b>{{ data['author_reward_30'] }} HP</b><br>
+                    Curation Reward (30 days): <b>{{ data['curation_reward_30'] }} HP</b><br>
+                </p> -->
 
-                    <!-- progress bar -->
-                    <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning"
-                    role="progressbar" style="width: {{ data['voting_power'] }}%"
-                    aria-valuenow="100"
-                    aria-valuemin="0" aria-valuemax="100">Voting Power {{ data['voting_power'] }}%</div>
-                    </div><br>
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 flex-grow-1 bd-highlight">
+                        <p class="lead">{{ username }}'s user information
+                            <b>( {{ data['reputation'] }} )</b><br>
+                            Author Reward (30 days): <b>{{ data['author_reward_30'] }} HP</b><br>
+                            Curation Reward (30 days): <b>{{ data['curation_reward_30'] }} HP</b><br>
+                        </p>
+                    </div>
+                    <div class="pb-3 bd-highlight">
+                        <img src="https://images.hive.blog/u/{{ username }}/avatar"
+                            onerror="this.onerror=null;
+                            this.src='https://images.hive.blog/u/hiveonboard/avatar'"
+                            alt="avatar"
+                            class="img-thumbnail rounded-circle">
+                    </div>
+                </div>
+
+                <!-- progress bar -->
+                <div class="progress" style="height: 30px;">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning"
+                role="progressbar" style="width: {{ data['voting_power'] }}%"
+                aria-valuenow="100"
+                aria-valuemin="0" aria-valuemax="100">Voting Power {{ data['voting_power'] }}%</div>
+                </div>
 
                 <div class="container">
                     <div class="row">
@@ -68,8 +88,13 @@
 
                     <div class="container px-lg-5">
                         <div class="row mx-lg-n5">
-                            <div class="col py-3 px-lg-5 border bg-light text-center">{{ element['delegatee'] }}</div>
-                            <div class="col py-3 px-lg-5 border bg-light text-center">{{ element['amount'] }} <b>HP</b></div>
+                            <div class="col py-3 px-lg-5 border bg-light text-center">
+                                <a href="https://hive.blog/@{{ element['delegatee'] }}">
+                                @{{ element['delegatee'] }}</a>
+                            </div>
+                            <div class="col py-3 px-lg-5 border bg-light text-center">
+                                {{ element['amount'] }} <b>HP</b>
+                            </div>
                         </div>
                     </div>
 
