changed swap page

--- a/templates/swap.html
+++ b/templates/swap.html
@@ -18,7 +18,7 @@
                 max-width:480px;
                 height:420px!important;
             }
-            @media(min-width:476px){
+            @media(min-width:1476px){
                 #simpleswap-frame {
                     height: 400px!important;
                 }
@@ -40,7 +40,7 @@
             <!-- simpleswap widget -->
             <div class="row">
                 <div class="col">
-                <iframe id="simpleswap-frame" name="SimpleSwap Widget" height="400px" src="https://simpleswap.io/widget/4b118c30-66f1-41ee-a211-515e5a4129d1" frameborder="0"></iframe>
+                <iframe id="simpleswap-frame" name="SimpleSwap Widget" width="1000px" height="400px" src="https://simpleswap.io/widget/4b118c30-66f1-41ee-a211-515e5a4129d1" frameborder="0"></iframe>
                 </div>
             </div>
 
