added token swap ifram

--- a/templates/swap.html
+++ b/templates/swap.html
@@ -38,10 +38,9 @@
             </div>
 
             <!-- simpleswap widget -->
-            <div class="row">
-                <div class="col">
-                <iframe id="simpleswap-frame" name="SimpleSwap Widget" width="1000px" height="400px" src="https://simpleswap.io/widget/4b118c30-66f1-41ee-a211-515e5a4129d1" frameborder="0"></iframe>
-                </div>
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe src="https://simpleswap.io/?ref=4f1871fcc5b4" title="Token Swap">
+                </iframe>
             </div>
 
         </div>
