added swap zone iframe

--- a/templates/swap.html
+++ b/templates/swap.html
@@ -37,9 +37,9 @@
                 <p class="lead">STEEM / HIVE Simple Token Swap</p>
             </div>
 
-            <!-- simpleswap widget -->
-            <div class="embed-responsive embed-responsive-16by9">
-                <iframe src="https://simpleswap.io/?ref=4f1871fcc5b4" title="Token Swap">
+            <!-- swapzone iframe -->
+            <div class="embed-responsive embed-responsive-16by9 rounded">
+                <iframe src="https://swapzone.io/?refId=4&from=hive&to=eth" title="Token Swap">
                 </iframe>
             </div>
 
