change swap message

--- a/templates/swap.html
+++ b/templates/swap.html
@@ -12,18 +12,6 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
         <title>Swap Token</title>
-        <style scoped>
-            #simpleswap-frame{
-                width:100%!important;
-                max-width:480px;
-                height:420px!important;
-            }
-            @media(min-width:1476px){
-                #simpleswap-frame {
-                    height: 400px!important;
-                }
-            }
-        </style>
     </head>
     <body>
 
@@ -34,7 +22,9 @@
 
             <div class="jumbotron">
                 <h1 class="display-4">Swap Token</h1>
-                <p class="lead">STEEM / HIVE Simple Token Swap</p>
+                <p class="lead">Instant STEEM/HIVE exchange to BTC/ETH or other cryptos(300+ coins).
+                <br>
+                No registration. Just swap it!</p>
             </div>
 
             <!-- swapzone iframe -->
