--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
 <!-- top navigation menu -->
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">
         <img src="/static/images/favicon/apple-touch-icon.png" width="30" height="30" class="d-inline-block align-top" alt="">
         tomoyan
@@ -10,11 +10,11 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-        <li class="nav-item active">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+            <a class="nav-link" href="/blurt">Blurt<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/swap">Swap <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/swap">Swap Token<span class="sr-only">(current)</span></a>
         </li>
     </ul>
     </div>
