update blurt votes

--- a/templates/blurt/profile_data.html
+++ b/templates/blurt/profile_data.html
@@ -112,7 +112,7 @@
             <!-- middle contents -->
             <div class="tab-content" id="nav-tabContent">
                 <div class="tab-pane fade show active" id="nav-main" role="tabpanel" aria-labelledby="nav-main-tab">
-                    <h1 class="display-4">Upvote Activity (7days)</h1>
+                    <h1 class="display-4">Upvote Activity (7days) Upvoted# {{ data['total_votes'] }}</h1>
                     <div class="row">
 
                         <!-- upvote chart goes in to canvas -->
