--- a/templates/blurt/profile_data.html
+++ b/templates/blurt/profile_data.html
@@ -13,8 +13,9 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/blurt_style.css') }}">
 
         <!-- chartjs -->
-        <script src="https://www.chartjs.org/dist/2.9.3/Chart.min.js"></script>
-        <script src="https://www.chartjs.org/samples/latest/utils.js"></script>
+        <script src="{{ url_for('static', filename='js/Chart.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/utils.js') }}"></script>
+
         <style>
         canvas {
             -moz-user-select: none;
@@ -86,7 +87,6 @@
                         role="tab" aria-controls="nav-main" aria-selected="true">
                         Main
                     </a>
-
 
                     <script type="text/javascript">
                        document.follower_api = '/api/blurt/follower/{{ username }}';
