--- a/templates/blurt/profile_data.html
+++ b/templates/blurt/profile_data.html
@@ -119,6 +119,7 @@
 
             <!-- middle contents -->
             <div class="tab-content" id="nav-tabContent">
+
                 <div class="tab-pane fade show active" id="nav-main" role="tabpanel" aria-labelledby="nav-main-tab">
                     <h1 class="display-4">Upvote Activity (7days) Upvoted# {{ data['total_votes'] }}</h1>
 
@@ -206,8 +207,22 @@
                             };
                         </script>
                         {% endblock %}
-
                     </div>
+
+                    <h1 class="display-4">Upvoted Post (7days)</h1>
+                    {% if data['permlinks'] %}
+                    <ul class="list-group pb-3">
+                        {% for link in data['permlinks'] %}
+                            <li class="list-group-item">
+                                <a class="text-blurt" href="https://blurt.blog/{{ link }}">{{ link }}</a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                    {% else %}
+                    <ul class="list-group pb-3">
+                        <li class="list-group-item"> No Upvoted Post -- yet </li>
+                    </ul>
+                    {% endif %}
                 </div>
 
                 <!-- List of Follower -->
