change list title

--- a/templates/blurt/profile_data.html
+++ b/templates/blurt/profile_data.html
@@ -209,7 +209,7 @@
                         {% endblock %}
                     </div>
 
-                    <h1 class="display-4">{{ username }}'s Upvoted Post</h1>
+                    <h1 class="display-4">Upvoted Post by {{ username }}</h1>
                     {% if data['permlinks'] %}
                     <ul class="list-group pb-3">
                         {% for link in data['permlinks'] %}
