add delegation api

--- a/templates/blurt/profile_data.html
+++ b/templates/blurt/profile_data.html
@@ -140,6 +140,13 @@
                         <div class="spinner-grow text-blurt m-3" role="status">
                             <span class="sr-only">Loading...</span>
                         </div>
+                        <div class="text-center">
+                            <img
+                                src="{{ url_for('static', filename='images/dancing_bear.gif') }}"
+                                class="img-fluid"
+                                alt="dancing_bear">
+                        </div>
+                        <!-- <img src="{{ url_for('static', filename='images/dancing_bear.gif') }}"> -->
                     </div>
 
                     <div class="row">
