--- a/static/css/blurt_style.css
+++ b/static/css/blurt_style.css
@@ -10,6 +10,13 @@
     color:#fff;
     background-color:#f2652e
 }
+body {
+  background: url('../images/jack.png') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
 .text-blurt{
     color:#f2652e!important
